src/inject.css
/* Page */
html {
    transition: margin-left 0.2s ease;
    -webkit-transition: margin-left 0.2s ease;
}
html.octotree { 
    margin-left: 240px;
}

/* Sidebar */
.octotree_sidebar {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 250px;
    background-color: #f8f8f8;
    border-right: 1px solid #ddd;
    overflow: visible;
    z-index: 999991;
    -webkit-transition: -webkit-transform 0.2s ease;
    transition: transform 0.2s ease;
    -webkit-transform: translate3d(-100%, 0, 0);
    transform: translate3d(-100%, 0, 0);
}
.octotree .octotree_sidebar {
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
}

.octotree_header {
    font-size: 16px;
    line-height: 2.7;
    margin: -5px;
    margin-bottom: 0;
    padding-left: 13px;
    width: 100%;
}
.octotree_header_repo {
    font-size: 16px;
    width: 100%;
    padding-right: 35px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.octotree_header_repo:before {
    font-family: octicons;
    content: '\f001';
    color: #bbb;
    margin-right: 6px;
    line-height: 28px;
}
.octotree_header_branch {
    line-height: 1;
    margin-top: -10px;
    margin-bottom: 5px;
    font-size: 12px;
}
.octotree_header_branch:before {
    font-family: octicons;
    content: '\f020';
    color: #bbb;
    margin-right: 8px;
    margin-left: 3px;
}

/* Source tree */
.octotree_sidebar inner > .tree { 
    margin: 5px;
}
.jstree-icon.tree,
.jstree-icon.blob {
    font: normal normal 16px octicons;
    display: inline-block;
    margin-right: 5px;
    text-decoration: none;
    -webkit-font-smoothing: antialiased;
}
.jstree-icon.tree:before {
    content: '\f016';
    color: #80a6cd;
}
.jstree-icon.blob:before {
    content: '\f011';
    color: #777;
}

.jstree-anchor {
    color: #4183c4 !important;
    text-decoration: none;
}
.jstree-anchor:hover {
    text-decoration: underline;
}

.jstree-default {
    border-bottom: 1px solid #eee;
}

.jstree-default .jstree-wholerow {
    border-top: 1px solid #eee;
    height: auto;
}
.jstree-default .jstree-wholerow-hovered {
    background: #eee;
}
.jstree-default .jstree-wholerow-clicked {
    background: #dbeeff;
}

.jstree-default .jstree-node {
  line-height: 24px;
  margin-left: 12px;
}
.jstree-default .jstree-icon,
.jstree-default .jstree-icon:empty,
.jstree-default .jstree-anchor {
    line-height: 28px;
}

.jstree-default .jstree-icon.jstree-ocl {
    margin-top: 1px;
    margin-right: -4px;
}

/* Token form */
.octotree_sidebar form div { 
    margin: 5px; 
}
.octotree_sidebar form input { 
    width: 230px; 
}
.octotree_sidebar form > .error { 
    color: #d35400; 
}

/* Toggle button */
.octotree_toggle {
    position: fixed !important;
    top: 5px;
    right: -35px;
    bottom: auto;
    left: auto;
    width: 30px;
    height: 30px;
    font-family: octicons;
    font-size: 20px;
    color: #333;
    text-align: center;
    line-height: 1;
    z-index: 999992;
    transition: right 0.2s ease, color 0.1s ease-in;
    -webkit-transition: right 0.2s ease, color 0.1s ease-in;
}
.octotree_toggle:hover {
    color: #4183C4;
}
.octotree_toggle:after {
    content: '\f078';
}
.octotree .octotree_toggle:after {
    content: '\f0a4';
}
.octotree .octotree_toggle {
    right: 5px;
}

.octotree_sidebar .ui-resizable-e {
    position: absolute;
    cursor: e-resize; 
    width: 7px; 
    right: -5px; 
    top: 0; 
    height: 100%;
}

